creacion de la pagina 404

--- a/index.html
+++ b/index.html
@@ -110,5 +110,10 @@
             
         </div>
     </section>
+    <footer class="footer">
+            <a href="/">terminos de uso</a>
+            <a href="/">declaracion de privacidad</a>
+            <a href="/">centro de ayuda</a>
+        </footer>
 </body>
 </html>
